Sonar: Fix java:S6204 (use Stream.toList)