@@ -1,6 +1,5 @@
 package org.kiwiproject.stream;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import org.junit.jupiter.api.DisplayName;
@@ -18,7 +17,7 @@ class IntStreamsTest {
         @Test
         void shouldReturnEmptyStringWhenGivenEmptyList() {
             var stream = IntStreams.indicesOf(List.of());
-            var indices = stream.boxed().collect(toList());
+            var indices = stream.boxed().toList();
 
             assertThat(indices).isEmpty();
         }
@@ -28,7 +27,7 @@ class IntStreamsTest {
             var strings = List.of("a", "b", "c", "d");
 
             var stream = IntStreams.indicesOf(strings);
-            var indices = stream.boxed().collect(toList());
+            var indices = stream.boxed().toList();
 
             assertThat(indices).containsExactly(0, 1, 2, 3);
         }
